--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -108,6 +108,11 @@
               {% endif %}
             {% endif %}
           {% endfor %}
+          <!-- CV Link -->
+          <li class="nav-item">
+            <a class="nav-link" href="{{ site.baseurl }}/assets/cv.pdf" target="_blank">CV</a>
+          </li>
+          {% comment %}
           {% if site.search_enabled %}
             <!-- Search -->
             <li class="nav-item">
@@ -116,6 +121,7 @@
               </button>
             </li>
           {% endif %}
+          {% endcomment %}
           {% if site.enable_darkmode %}
             <!-- Toogle theme mode -->
             <li class="toggle-container">
