--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -110,7 +110,7 @@
           {% endfor %}
           <!-- CV Link -->
           <li class="nav-item">
-            <a class="nav-link" href="{{ site.baseurl }}/assets/cv.pdf" target="_blank">CV</a>
+            <a class="nav-link" href="{{ site.baseurl }}/assets/pdf/cv.pdf" target="_blank">cv</a>
           </li>
           {% comment %}
           {% if site.search_enabled %}
