--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -128,3 +128,8 @@
   </div>
   {% include scripts/wechatModal.liquid %}
 {% endif %}
+{% if site.custom_social %}
+  <a href="{{ site.custom_social.url }}" title="{{ site.custom_social.title }}" target="_blank" rel="noopener">
+    <img src="{{ site.custom_social.logo }}" alt="{{ site.custom_social.title }}" style="width: 1em; height: 1em; margin-left: 0.5em; vertical-align: middle;" />
+  </a>
+{% endif %}
