--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -130,6 +130,7 @@
 {% endif %}
 {% if site.custom_social %}
   <a href="{{ site.custom_social.url }}" title="{{ site.custom_social.title }}" target="_blank" rel="noopener">
-    <img src="{{ site.custom_social.logo }}" alt="{{ site.custom_social.title }}" style="width: 1em; height: 1em; margin-left: 0.5em; vertical-align: middle;" />
+    <img src="{{ site.custom_social.logo }}" alt="{{ site.custom_social.title }}"
+         style="height: 1em; width: 1em; margin-left: 0.5em; vertical-align: text-bottom; display: inline-block;" />
   </a>
 {% endif %}
