--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -131,6 +131,6 @@
 {% if site.custom_social %}
   <a href="{{ site.custom_social.url }}" title="{{ site.custom_social.title }}" target="_blank" rel="noopener">
     <img src="{{ site.custom_social.logo }}" alt="{{ site.custom_social.title }}"
-         style="height: 1em; width: 1em; margin-left: 0.5em; vertical-align: text-bottom; display: inline-block;" />
+         style="height: 1em; width: 1em; margin-left: 0.5em; vertical-align: middle; position: relative; top: -0.1em;" />
   </a>
 {% endif %}
